--- a/package.json
+++ b/package.json
@@ -25,15 +25,17 @@
         "firebase": "^9.19.1",
         "react": "18.2.0",
         "react-dom": "18.2.0",
-        "react-native": "0.71.4",
+        "react-native": "0.71.6",
         "react-native-gesture-handler": "~2.9.0",
         "react-native-maps": "1.3.2",
         "react-native-reanimated": "~2.14.4",
         "react-native-safe-area-context": "4.5.0",
         "react-native-screens": "~3.20.0",
         "react-native-svg": "13.4.0",
+        "react-native-uuid": "^2.0.1",
         "react-native-web": "~0.18.10",
-        "react-redux": "^8.0.5"
+        "react-redux": "^8.0.5",
+        "expo-updates": "~0.16.4"
     },
     "devDependencies": {
         "@babel/core": "^7.20.0"
